# qwen3-trtx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_EN.md  main.cpp  qwen3_save_wts.py
include/: block.h  calibrator.h  config.h  model.h
plugin/: apply_rotary_pos_emb_plugin.cpp  apply_rotary_pos_emb_plugin.cu  apply_rotary_pos_emb_plugin.h  repeat_kv_plugin.cpp  repeat_kv_plugin.cu  repeat_kv_plugin.h
src/: block.cpp  calibrator.cpp  model.cpp
tokenizer.cpp/: CMakeLists.txt
